finished some tutorials

--- a/public/csvMapCollide.html
+++ b/public/csvMapCollide.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <title> Phaser Tilemap Example </title>
     <script src='phaser.js'></script>
-    <script src='js/csvMapCollide.js'></script>
+    <script src='csvMapCollide.js'></script>
   </head>
   <body>
     <h1> Phase Tilemap Example </h1>
