--- a/public/csvMapP2.html
+++ b/public/csvMapP2.html
@@ -4,11 +4,11 @@
     <meta charset='utf-8'>
     <title> Phaser Tilemap Example </title>
     <script src='phaser.js'></script>
-    <script src='js/blank.js'></script>
+    <script src='csvMapP2.js'></script>
   </head>
   <body>
     <h1> Phase Tilemap Example </h1>
-    <h1> Blank </h1>
-    <div id='blank'></div>
+    <h1> CSV Map P2 </h1>
+    <div id='csvMapP2'></div>
   </body>
 </html>
