--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <script src='main.js'></script>
   </head>
   <body>
-    <h1> Main </h1>
+    <h1> Phaser Tilemap Example </h1>
+    <h2> Main Playground </h2>
     <div id='main'></div>
   </body>
 </html>
