--- a/public/blank.html
+++ b/public/blank.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <title> Phaser Tilemap Example </title>
     <script src='phaser.js'></script>
-    <script src='js/blank.js'></script>
+    <script src='blank.js'></script>
   </head>
   <body>
     <h1> Phase Tilemap Example </h1>
