--- a/public/mapBounce.html
+++ b/public/mapBounce.html
@@ -4,11 +4,11 @@
     <meta charset='utf-8'>
     <title> Phaser Tilemap Example </title>
     <script src='phaser.js'></script>
-    <script src='js/blank.js'></script>
+    <script src='mapBounce.js'></script>
   </head>
   <body>
     <h1> Phase Tilemap Example </h1>
-    <h1> Blank </h1>
-    <div id='blank'></div>
+    <h2> Map Bounce </h2>
+    <div id='mapBounce'></div>
   </body>
 </html>
